// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with point = 99999 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 5,
      "flexDirection": "row",
      "height": 120,
      "margin": 16,
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 2,
      "width": 300,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/asset/assessment1.jpeg",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "height": 100,
        "maxWidth": 100,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-around",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      numberOfLines={3}
      style={
        Object {
          "color": "#333333",
          "fontWeight": "700",
          "width": "90%",
        }
      }
    >
      Advanced Health Screening
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "width": "50%",
          }
        }
      >
        Earn up to 
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          99999
        </Text>
         pts
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#EB596E",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders without point 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 5,
      "flexDirection": "row",
      "height": 120,
      "margin": 16,
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 2,
      "width": 300,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/asset/assessment1.jpeg",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "height": 100,
        "maxWidth": 100,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-around",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      numberOfLines={3}
      style={
        Object {
          "color": "#333333",
          "fontWeight": "700",
          "width": "90%",
        }
      }
    >
      Advanced Health Screening
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "width": "50%",
          }
        }
      >
        Earn up to 
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          0
        </Text>
         pts
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#EB596E",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
